--- a/pages/dificuldade.html
+++ b/pages/dificuldade.html
@@ -17,6 +17,9 @@
       <button type="submit" class="b2">Normal</button>
 
       <button type="submit" class="b3">Advanced</button>
+      
+      <button type="submit" class="back">Back</button>
     </div>
+
   </body>
 </html>
